front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-frontend
  namespace: default
  labels:
    app: products-frontend
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-frontend
  template:
    metadata:
      labels:
        app: products-frontend
    spec:
      containers:
      - name: web-container
        image: us-central1-docker.pkg.dev/mi-proyecto-gcp/repo/react-frontend:v1.0.0
        ports:
        - containerPort: 80
          name: http-web
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: products-frontend-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http-web
    protocol: TCP
  selector:
    app: products-frontend
